observability/grafana-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-loadbalancer
  namespace: observability
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: kube-prometheus-stack
