observability/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: observability
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - grafana.int.oquinena.com
    secretName: int-oquinena-com-tls
  rules:
  - host: grafana.int.oquinena.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
